results/SVCOMP/2-shot/log-assert2-2024_03_18_23_01_13.txt
import java.util.Random;

class assert2 {
  //@ requires Integer.MIN_VALUE <= i && i <= Integer.MAX_VALUE;
  //@ ensures i > 1000 ==> i > 1000;
  public static void main() {
    int i = new Random().nextInt();
	
    if (i >= 1000) assert i > 1000 : "i is greater 1000";
  }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: cannot find symbol
  //@ requires Integer.MIN_VALUE <= i && i <= Integer.MAX_VALUE;
                                    ^
  symbol:   variable i
  location: class assert2
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: cannot find symbol
  //@ requires Integer.MIN_VALUE <= i && i <= Integer.MAX_VALUE;
                                         ^
  symbol:   variable i
  location: class assert2
/home/max/Documents/JMLGPT/tmp/assert2.java:5: error: cannot find symbol
  //@ ensures i > 1000 ==> i > 1000;
              ^
  symbol:   variable i
  location: class assert2
/home/max/Documents/JMLGPT/tmp/assert2.java:5: error: cannot find symbol
  //@ ensures i > 1000 ==> i > 1000;
                           ^
  symbol:   variable i
  location: class assert2
4 errors

